afd-icon/afd-icon_v1_Service_afd-icon.yaml
apiVersion: v1
kind: Service
metadata:
  name: afd-icon
  namespace: afd-icon
spec:
  ports:
  - port: 8000
  selector:
    app: afd-icon
